# modelcontextprotocol

./: .env  README.md  mcp_server_config.json
Tutotials/: ChatGoogleGenerativeAI_with_memory.py  main.py  pyproject.toml
clients/mcp-client/: client.py  client_depreciated.py  client_sse.py  gemini_config.py  gemini_tools.py  langchain_mcp_client.py  langchain_mcp_client_with_config.py  langchain_mcp_client_with_config_without_chathistory.py  mcp_client.py  pyproject.toml  requirements.txt  schema_utils.py
langgraph-evals/chatbot-evals/: .gitignore  langgraph.json  run_chatbot_evlas.ipynb
langgraph-evals/chatbot-evals/src/: relationship_agent.py
langgraph-evals/chatbot-evals/tests/: test_agent_evaluation.py
langgraph-evals/notebooks/: evals-101.ipynb
langgraph-evals/rag-evals/: main.py  pyproject.toml  rag-evals.ipynb  test_rag_evals.py
langgraph-evals/rag-evals/src/agents/: rag_agent.py
langgraph-mcp/: .gitignore  langgraph-mcp.ipynb  langgraph.json  pyproject.toml
langgraph-mcp/src/agent/: general_toolcalling_agent.py  relationship_agent.py
servers/server_sse/: main.py  pyproject.toml  requirements.txt  terminal_server_sse.py
servers/terminal_server/: claude_desktop_config.json  pyproject.toml  requirements.txt  terminal_server.py
servers/weather_server/: pyproject.toml
workspace/: airplanes.txt  langchain_mcp_client_test.txt  mcp_success.txt  test_output.txt
workspace/cloud_file_output/: mcp_terminal_server.txt
workspace/test_101/: test_file.txt
