[project]
name = "langgraph-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.26",
    "langchain-google-genai>=2.1.6",
    "langchain-mcp-adapters>=0.1.8",
    "langgraph>=0.5.1",
    "langgraph-api>=0.2.78",
    "langgraph-cli[inmem]>=0.3.4",
    "langgraph-sdk>=0.1.72",
]
