[project]
name = "rag-evals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.1.7",
    "pandas>=2.3.1",
    "pytest>=8.4.1",
    "tiktoken>=0.9.0",
]
